config-root/namespaces/jx-staging/simple-node-js-react-npm-app/simple-node-js-react-npm-app-svc.yaml
# Source: simple-node-js-react-npm-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-js-react-npm-app
  labels:
    chart: "simple-node-js-react-npm-app-0.1.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: simple-node-js-react-npm-app-simple-node-js-react-npm-app
