config-root/namespaces/jx-staging/simple-node-js-react-npm-app/simple-node-js-react-npm-app-ingress.yaml
# Source: simple-node-js-react-npm-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: simple-node-js-react-npm-app
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: simple-node-js-react-npm-app
              servicePort: 80
      host: simple-node-js-react-npm-app-jx-staging.192.168.64.2.nip.io
